background, particles e efeito neon

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -5,11 +5,18 @@
         <link rel="stylesheet" href="./static/style.css">
     </head>
     <body>
-        <div id="title-text">titulo</div>
-
+        <div id="title-text">Aplicação Zumbi</div>
+        <div id="description-text">Esta é a aplicação maliciosa que se conecta ao servidor de controle e executa comandos recebidos</div>
+        
+        <div id="console">
+            
+        </div>
+        
+        <div id="particles-js"></div>
         <script src="./static/zombie.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+        <script src="./static/app.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     </body>
 
 </html>
