--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -1,5 +1,12 @@
+body, html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
+    background-image: linear-gradient(-24deg, #2b5876 0%, #4e4376 100%);
 }
 
 #title-text {
@@ -8,4 +15,15 @@ body {
     position: relative;
     font-family: "Roboto";
     font-size: 42px;
+    margin-top: 30px;
+    text-shadow: 0 0 5px #be6ee2;
+}
+
+#description-text {
+    color: white;
+    text-align: center;
+    position: relative;
+    font-family: "Roboto";
+    font-size: 18px;
+    margin-top: 30px;
 }
