console messages funcional, criando função agora

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -8,8 +8,9 @@
         <div id="title-text">Aplicação Zumbi</div>
         <div id="description-text">Esta é a aplicação maliciosa que se conecta ao servidor de controle e executa comandos recebidos</div>
         
-        <div id="console">
-            
+        <div id="console" class="center">
+            <div id="console-header">registro de comunicações</div>
+            <div id="console-messages"></div>
         </div>
         
         <div id="particles-js"></div>
