--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -3,10 +3,65 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body {
     background-image: linear-gradient(-24deg, #2b5876 0%, #4e4376 100%);
+}
+
+.center {
+    text-align: center;
+    position: relative;
+    top: 30%;
+    transform: translateY(-50%);
+    left: 50%;
+    transform: translateX(-50%);
+
+}
+
+.default {
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 14px;
+}
+
+.message {
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    vertical-align: bottom;
+    font-family: monospace;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    text-align: start;
+}
+
+#console-header {
+    background-color: #4e4376;
+    color: #fff;
+    padding: 10px;
+    font-size: 14px;
+    font-family: monospace;
+    text-align: center;
+    border-bottom: 1px solid #fff;
+}
+
+#console-messages {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #303030;
+    overflow-y: scroll;
+}
+
+#console {
+    position: absolute;
+    display: block;
+    width: 35%;
+    height: 35%;
+    background-color: #303030;
+    overflow: hidden;
+    border: 1px solid #fff;
 }
 
 #title-text {
