--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -17,17 +17,31 @@ body {
     transform: translateY(-50%);
     left: 50%;
     transform: translateX(-50%);
-
 }
 
-.default {
+.log-default {
     color: rgba(255, 255, 255, 0.75);
     font-size: 14px;
 }
 
+.log-info {
+    color: rgba(255, 255, 255, 0.2);
+    font-size: 14px;
+}
+
+.log-success {
+    color: #4CAF50;
+    font-size: 14px;
+}
+
+.log-error {
+    color: #F44336;
+    font-size: 14px;
+}
+
 .message {
-    padding: 0px;
-    margin: 0px;
+    padding: 1px;
+    margin: 1px;
     width: 100%;
     vertical-align: bottom;
     font-family: monospace;
@@ -45,13 +59,16 @@ body {
     border-bottom: 1px solid #fff;
 }
 
+
 #console-messages {
     position: relative;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 85%;
     background-color: #303030;
     overflow-y: scroll;
+    overflow-x: hidden;
+    padding-bottom: 10px;
 }
 
 #console {
