--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -64,21 +64,24 @@ body {
     position: relative;
     display: block;
     width: 100%;
-    height: 85%;
+    height: 100%;
+    padding-bottom: 20px;
     background-color: #303030;
     overflow-y: scroll;
     overflow-x: hidden;
-    padding-bottom: 10px;
 }
+
 
 #console {
     position: absolute;
     display: block;
-    width: 35%;
-    height: 35%;
+    width: 50%;
+    height: 55%;
     background-color: #303030;
     overflow: hidden;
     border: 1px solid #fff;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 #title-text {
@@ -97,5 +100,5 @@ body {
     position: relative;
     font-family: "Roboto";
     font-size: 18px;
-    margin-top: 30px;
+    margin-top: 50px;
 }
