--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,18 +6,29 @@
     </head>
     <body>
         <div id="title-text">Aplicação Zumbi</div>
-        <div id="description-text">Esta é a aplicação maliciosa que se conecta ao servidor de controle e executa comandos recebidos</div>
+
+        <div id="description-text">
+            <span>Esta é a aplicação maliciosa que se conecta ao servidor de controle e executa comandos recebidos;</span><br>
+            <span>Tudo o que acontece nessa aplicação pode ser executado em plano de fundo, sem que a vítima saiba;</span>
+        </div>
+
+        <div id="description-text"></div>
         
         <div id="console" class="center">
-            <div id="console-header">registro de comunicações</div>
+            <div id="console-header">
+                <span>log de comunicações</span>
+            </div>
+
             <div id="console-messages"></div>
+
         </div>
-        
+            
         <div id="particles-js"></div>
         <script src="./static/zombie.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
         <script src="./static/app.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </body>
 
 </html>
