desquebrei os imports que tavam errados

--- a/frontend/templates/dashboard.html
+++ b/frontend/templates/dashboard.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="./static/style.css">
     </head>
     <body>
-        <div id="title-text">Aplicação Zumbi</div>
+        <div id="title-text">Dashboard</div>
 
         <div id="description-text">
             <span>Esta é a aplicação maliciosa que se conecta ao servidor de controle e executa comandos recebidos;</span><br>
@@ -13,14 +13,12 @@
         </div>
 
         <div id="description-text"></div>
-        
+
         <div id="console" class="center">
             <div id="console-header">
                 <span>log de comunicações</span>
             </div>
-
             <div id="console-messages"></div>
-
         </div>
             
         <div id="particles-js"></div>
