added metrics footer + footer update function/job

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -20,6 +20,13 @@
             </div>
 
             <div id="console-messages"></div>
+            
+            <div id="console-footer">
+                <div id="footer-labels">
+                    <span id="sent-label">sent: </span>
+                    <span id="received-label">received: </span>
+                </div>
+            </div>
 
         </div>
             
