--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -64,7 +64,7 @@ body {
     position: relative;
     display: block;
     width: 100%;
-    height: 100%;
+    height: 95%;
     padding-bottom: 20px;
     background-color: #303030;
     overflow-y: scroll;
@@ -91,7 +91,7 @@ body {
     font-family: "Roboto";
     font-size: 42px;
     margin-top: 30px;
-    text-shadow: 0 0 5px #be6ee2;
+    text-shadow: 0 0 25px #be6ee2;
 }
 
 #description-text {
@@ -101,4 +101,28 @@ body {
     font-family: "Roboto";
     font-size: 18px;
     margin-top: 50px;
+    text-shadow: 0 0 25px #be6ee2;
+}
+
+#console-footer {
+    position: absolute;
+    bottom: 0%;
+    width: 100%;
+    height: 5%;
+    background-color: #303030;
+    overflow: hidden;
+    margin: 0px;
+    padding: 0px;
+    border-top: 1px solid #fff;
+}
+
+#footer-labels{
+    color: white;
+    text-align: start;
+    position: relative;
+    vertical-align: middle;
+    font-family: monospace;
+    font-size: 10px;
+    margin: 0px;
+    padding: 0px;
 }
