--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -23,8 +23,8 @@
             
             <div id="console-footer">
                 <div id="footer-labels">
-                    <span id="sent-label">sent: </span>
-                    <span id="received-label">received: </span>
+                    <span id="sent-label" class="label">sent: </span>
+                    <span id="received-label" class="label">received: </span>
                 </div>
             </div>
 
