admin page, OOP no server e +

--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Zumbi</title>
+        <title>C2 - Admin</title>
         <link rel="stylesheet" href="./static/style.css">
     </head>
     <body>
-        <div id="title-text">Dashboard</div>
+        <div id="title-text">C2 - Administrador</div>
 
         <div id="description-text">
-            <span>Esta é a aplicação maliciosa que se conecta ao servidor de controle e executa comandos recebidos;</span><br>
-            <span>Tudo o que acontece nessa aplicação pode ser executado em plano de fundo, sem que a vítima saiba;</span>
+            <span>Esta é a página de comando da botnet, é por aqui que são monitorados e enviadas as ordens aos zumbis conectados;</span><br>
         </div>
 
         <div id="description-text"></div>
 
         <div id="console" class="center">
             <div id="console-header">
-                <span>log de comunicações</span>
+                <span>log do servidor</span>
             </div>
             <div id="console-messages"></div>
         </div>
